--- a/css/style.css
+++ b/css/style.css
@@ -1,10 +1,10 @@
-@import url("https://fonts.googleapis.com/css2?family=League+Spartan:wght@100..900&display=swap");
+/* @import url("https://fonts.googleapis.com/css2?family=League+Spartan:wght@100..900&display=swap"); */
 
 * {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    font-family: "League Spartan", sans-serif;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
 
 html {
@@ -66,3 +66,85 @@ button.normal {
     transition: 0.3s;
 }
 
+
+#header {
+    background-color: #ffffff;
+}
+
+#header nav {
+    background-color: none;
+    display: flex;
+}
+
+#header nav ul {
+    list-style: none;
+    display: flex;
+    padding: 0 0 0 90px;
+}
+
+#header nav ul li {
+    padding: 10px;
+}
+
+#header nav li a {
+    text-decoration: none;
+    font-size: 17px;
+    font-weight: 650;
+    text-transform: uppercase;
+    color: rgba(32, 32, 32, 0.842);
+}
+
+#header .active {
+    color: #88c8bc;
+}
+
+#header nav li a:hover {
+    color: #88c8bc;
+    transition: all ease 0.3s;
+}
+
+#header .nav-search {
+    display: flex;
+    justify-content: space-between;
+    padding: 10px 0 10px 0;
+    border: 0.5px solid red;
+}
+
+.nav-search h2 {
+    margin: 10px 0 0 50px;
+}
+
+.nav-search h2 a {
+    margin: 10px 50px;
+    font-size: 50px;
+    font-weight: 700;
+    text-decoration: none;
+    color: rgb(102, 102, 102);
+}
+
+.nav-search form {
+    margin: 20px 120px;
+    padding: 0px;
+}
+
+.nav-search form input {
+    width: 250px;
+    height: 35px;
+    padding: 1.25em;
+    font-size: 15px;
+    font-weight: 500;
+    border: 1px solid rgb(139, 139, 139);
+    outline: none;
+    border-top-left-radius:50px;
+    border-bottom-left-radius:50px;
+}
+
+.nav-search form i {
+    background: #88c8bc;
+    font-size: 15px;
+    
+    padding: 15px;
+    position: absolute;
+    right: -5;
+    border-radius: 50px;
+}
