Added images and made changes

--- a/css/style.css
+++ b/css/style.css
@@ -51,6 +51,7 @@ p {
 
 body {
     width: 100%;
+    background-color: #ffffff;
 }
 
 button.normal {
@@ -68,7 +69,56 @@ button.normal {
 
 
 #header {
-    background-color: #ffffff;
+    background-color: #f5f5f5;
+}
+
+#header .nav-search {
+    display: flex;
+    justify-content: space-between;
+    padding: 1px 0 10px 0;
+}
+
+.nav-search h3 {
+    margin: 5px 0 0 50px;
+}
+
+.nav-search h3 a {
+    margin: 5px 50px;
+    font-size: 30px;
+    font-weight: 700;
+    text-decoration: none;
+    color: rgb(102, 102, 102);
+}
+
+.nav-search form {
+    margin: 20px 120px;
+    padding: 0px 10px;
+    display: block;
+}
+
+.nav-search form input {
+    width: 250px;
+    height: 35px;
+    padding: 1.25em;
+    font-size: 15px;
+    font-weight: 500;
+    border: none;
+    outline: none;
+    border-radius: 50px;
+}
+
+.nav-search form i {
+    height: 39px;
+    width: 40px;
+    font-size: 19px;
+    color: white;
+    padding: 10px;
+    background: #88c8bc;
+    border: 1px solid #88c8bc;
+    border-radius: 50%;
+    position: absolute;
+    top: inherit;
+    right: 199px;
 }
 
 #header nav {
@@ -79,11 +129,13 @@ button.normal {
 #header nav ul {
     list-style: none;
     display: flex;
+    justify-content: space-between;
+    align-items: center;
     padding: 0 0 0 90px;
 }
 
 #header nav ul li {
-    padding: 10px;
+    padding: 1px 12px;
 }
 
 #header nav li a {
@@ -103,48 +155,23 @@ button.normal {
     transition: all ease 0.3s;
 }
 
-#header .nav-search {
-    display: flex;
-    justify-content: space-between;
-    padding: 10px 0 10px 0;
-    border: 0.5px solid red;
+.slide-banner{
+    display: block;
+    background-color: #88c8bc;
+    width: 100%;
+    height: auto;
+    padding: 10px;
+
+    text-align: center;
+}
+.slide-banner h3 a {
+    color: rgb(255, 255, 255);
+    font-size: 25px;
+    font-weight: 450;
 }
 
-.nav-search h2 {
-    margin: 10px 0 0 50px;
-}
 
-.nav-search h2 a {
-    margin: 10px 50px;
-    font-size: 50px;
-    font-weight: 700;
-    text-decoration: none;
-    color: rgb(102, 102, 102);
-}
-
-.nav-search form {
-    margin: 20px 120px;
-    padding: 0px;
-}
-
-.nav-search form input {
-    width: 250px;
-    height: 35px;
-    padding: 1.25em;
-    font-size: 15px;
-    font-weight: 500;
-    border: 1px solid rgb(139, 139, 139);
-    outline: none;
-    border-top-left-radius:50px;
-    border-bottom-left-radius:50px;
-}
-
-.nav-search form i {
-    background: #88c8bc;
-    font-size: 15px;
-    
-    padding: 15px;
-    position: absolute;
-    right: -5;
-    border-radius: 50px;
+#hero {
+    background-color: #465b52;
+    background-image: url(Assets/Images/img_bg_1.jpg);
 }
