Added images and made changes

--- a/css/style.css
+++ b/css/style.css
@@ -172,6 +172,5 @@ button.normal {
 
 
 #hero {
-    background-color: #465b52;
-    background-image: url(Assets/Images/img_bg_1.jpg);
+    background-image: url();
 }
