--- a/css/style.css
+++ b/css/style.css
@@ -170,7 +170,12 @@ button.normal {
     font-weight: 450;
 }
 
-
 #hero {
-    background-image: url();
+    width: 100%;
+    height: auto;
+    background-position: center;
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-color: #f8f8f8;
+    margin-top: 0px;
 }
